Fixed navbar on mobile devices

--- a/src/styles/components/chat/Navbar.module.scss
+++ b/src/styles/components/chat/Navbar.module.scss
@@ -11,7 +11,7 @@
   height: 100vh;
   background-color: #2f3135;
 
-  @media screen and (max-width: 700px) {
+  @media (pointer: none), (pointer: coarse) {
     position: absolute;
     top: 0;
     left: 0;
